--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -29,7 +29,7 @@
     <div ng-controller="RootCtrl"> 
         <div class="header">
             <hr>
-            <div class="logo"></div>
+            <div class="logo" ng-class="{big: complete}"></div>
         </div>
         <ion-nav-view></ion-nav-view>
     </div>
