--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -40,7 +40,7 @@
       <!-- Left menu -->
       <ion-side-menu side="left">
         <div class="list">
-          <a menu-close class="item item-icon-left" href="#/home">
+          <a menu-close class="item item-icon-left" href="#/login">
             <i class="icon ion-home"></i>
             Home
           </a>
