--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,7 @@
     <script src="lib/lodash/dist/lodash.js"></script>
     <script src="lib/jquery/jquery-1.11.3.min.js"></script>
     <script src="lib/mediaelement/mediaelement-and-player.min.js"></script>
+    <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
